# RTGDE

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md  integral.txt  metric_overview.plot
gnuplot/: decision_log.plot  metric_overview.plot  model_output_scored.plot  model_output_scored_inverted.plot  plot_usage_graph.plot  plot_usage_graph.sh  prediction.plot
gnuplot/dvfs/: decision_log.plot  model_output_scored.plot  model_output_scored_inverted.plot  perflvl_log.plot  score_log.plot
include/: decision.h  decision_input.h  fsm.h  graph.h  history.h  list.h  metric.h  model.h  prediction.h  rtgde.h  sample.h  score.h  scoring.h  utils.h
include/decision/: simple.h
include/models/: dummy.h
include/predictions/: average.h  constraint.h  fsm.h  pred_fsm.h  simple.h
include/scoring/: simple.h
lib/: decision.c  decision_input.c  decision_priv.h  fsm.c  fsm_priv.h  graph.c  graph_priv.h  history.c  metric.c  metric_priv.h  model.c  model_priv.h  prediction.c  prediction_priv.h  rtgde.c  score.c  score_priv.h  scoring.c  scoring_priv.h  utils.c
lib/decision/: simple.c
lib/models/: dummy.c
lib/prediction/: simple.c
lib/predictions/: average.c  constraint.c  fsm.c  simple.c
lib/predictions/fsm/: history_fsm.c  history_fsm.h  pred_fsm.c
lib/scoring/: simple.c
other/: matlab_min.m
tests/: flowgraph.c  graph.c  minimal.c  nv_graph.c  pcap.c  pcap_live.c
tests/dvfs/: dvfs.c  dvfs_decision.c  dvfs_decision.h  dvfs_save_trace.c  model_perflvl.c  model_perflvl.h
tests/pcap/: model_simple_radio.c  model_simple_radio.h  pcap.c  pcap_decision.c  pcap_decision.h  pred_packets.c  pred_packets.h
